--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,14 @@ services:
       spring_profiles_active: security,docker
     depends_on:
       - mongo
+  match:
+    image: tindeer/brinder-match-api
+    ports:
+      - 9081:8080
+    environment:
+      spring_profiles_active: security,docker
+    depends_on:
+      - mongo
   swagger:
     image: swaggerapi/swagger-ui
     environment:
