--- a/brinder-profile-api/Dockerfile
+++ b/brinder-profile-api/Dockerfile
@@ -1,14 +1,9 @@
-FROM gradle:latest as compile
-ADD . /home/source/java
-WORKDIR /home/source/java
-# Default gradle user is `gradle`. We need to add permission on working directory for gradle to build.
-USER root
-RUN chown -R gradle /home/source/java
-USER gradle
-RUN gradle clean build
-
 FROM adoptopenjdk/openjdk11
-WORKDIR /home/application/java
-COPY --from=compile "/home/source/java/build/libs/brinder-profile-api-1.0.0.jar" .
+
+RUN mkdir /app
+
+COPY "build/libs/brinder-profile-api-1.0.0-SNAPSHOT.jar" /app/brinder-profile-api-1.0.0-SNAPSHOT.jar
+
 EXPOSE 8080
-ENTRYPOINT [ "java", "-jar", "/home/source/java/build/libs/brinder-profile-api-1.0.0.jar"]
+
+ENTRYPOINT [ "java", "-jar", "/app/brinder-profile-api-1.0.0-SNAPSHOT.jar"]
