--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
       - 9080:8080
     environment:
       spring_profiles_active: security,docker
+      keycloak_credentials_secret: 95567c00-d078-48de-b8e1-fc79dad5cd35
     depends_on:
       - mongo
   match:
@@ -48,6 +49,7 @@ services:
       - 9081:8080
     environment:
       spring_profiles_active: security,docker
+      keycloak_credentials_secret: 95567c00-d078-48de-b8e1-fc79dad5cd35
     depends_on:
       - mongo
   swagger:
