--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       POSTGRES_USER: keycloak
       POSTGRES_DB: keycloak
       PGADMIN_CONFIG_SERVER_MODE: "False"
+
   keycloak:
     build: ./keycloak
     depends_on:
@@ -21,6 +22,7 @@ services:
       DB_PASSWORD: keycloak
     ports:
       - 8080:8080
+
   pgadmin:
     build: ./pgadmin
     environment:
@@ -29,19 +31,28 @@ services:
     ports:
       - 5050:80
     depends_on:
-      - postgres  
+      - postgres
+
   mongo:
     image: mongo
+    command: mongod --port 27017
     ports:
       - "27017:27017"
+
   profile:
     image: tindeer/brinder-profile-api
-    ports:
-      - 9080:8080
     environment:
       spring_profiles_active: security,docker
     depends_on:
       - mongo
+
+  match:
+    image: tindeer/brinder-match
+    environment:
+      spring_match_api: security,docker
+    depends_on:
+      - mongo
+
   swagger:
     image: swaggerapi/swagger-ui
     environment:
@@ -49,10 +60,29 @@ services:
       DEEP_LINKING: "true"
       OAUTH2_REDIRECT_URL: http://localhost:8888/oauth2-redirect.html
       OAUTH_CLIENT_ID: swagger
-      OAUTH_USE_PKCE: "true"  
+      OAUTH_USE_PKCE: "true"
       OAUTH_REALM: tindeer
       OAUTH_APP_NAME: swagger
-    ports: 
+    ports:
       - 8888:8080
     volumes:
       - ./swagger:/doc
+
+  kong:
+    image: kong:alpine
+    environment:
+      KONG_DATABASE: "off"
+      KONG_DNS_RESOLVER: "127.0.0.11"
+      KONG_DECLARATIVE_CONFIG: "/usr/local/kong/declarative/kong.yml"
+      KONG_PROXY_ACCESS_LOG: "/dev/stdout"
+      KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
+      KONG_PROXY_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+    volumes:
+      - ./conf:/usr/local/kong/declarative
+    ports:
+      - "8000:8000"
+      - "8443:8443"
+      - "8001:8001"
+      - "8444:8444"
