--- a/brinder-profile-api/build.gradle
+++ b/brinder-profile-api/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' 			version '2.5.3'
 	id 'io.spring.dependency-management' 	version '1.0.11.RELEASE'
+	id 'com.google.cloud.tools.jib' 		version '3.3.1'
 	id 'java'
 }
 
@@ -28,6 +29,12 @@ repositories {
 
 bootBuildImage {
 	imageName = "tindeer/${project.name}"
+}
+
+jib {
+	to {
+		image = "tindeer/${project.name}"
+	}
 }
 
 dependencies {
