--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -1,2 +1,2 @@
-FROM quay.io/keycloak/keycloak
-ADD tindeer-realm.json /tmp/tindeer-realm.json
+FROM quay.io/keycloak/keycloak:legacy
+ADD tindeer-realm.json /tmp/tindeer-realm.jsonDemoApplication
