add create profile secured endpoint in swagger

--- a/brinder-profile-api/build.gradle
+++ b/brinder-profile-api/build.gradle
@@ -29,9 +29,9 @@ repositories {
 
 bootBuildImage {
 	imageName = "tindeer/${project.name}"
-	docker {
+	/*docker {
 		bindHostToBuilder = true
-	}
+	}*/
 }
 
 jib {
