:tada: beginning match api

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,15 +2,19 @@ version: "3"
 services:
   keycloak:
     build: ./keycloak
-    environment:
-      KEYCLOAK_ADMIN: keycloak
-      KEYCLOAK_ADMIN_PASSWORD: keycloak
+#    environment:
+#      KEYCLOAK_ADMIN: keycloak
+#      KEYCLOAK_ADMIN_PASSWORD: keycloak
     ports:
       - 8080:8080
   mongo:
     image: mongo
     ports:
       - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ncc
+      MONGO_INITDB_ROOT_PASSWORD: nccfisa
+      MONGO_INITDB_DATABASE: brindeer-users
   profile:
     image: tindeer/brinder-profile-api
     ports:
