add coordonnees in requestbody

--- a/brinder-match/build.gradle
+++ b/brinder-match/build.gradle
@@ -42,8 +42,9 @@ dependencies {
     implementation 		'com.github.rutledgepaulv:q-builders:1.5'
     implementation 		'com.github.rutledgepaulv:rest-query-engine:0.7.1'
     implementation		'org.keycloak:keycloak-spring-boot-starter'
-    implementation 'org.projectlombok:lombok:1.18.18'
-    implementation 'org.projectlombok:lombok:1.18.18'
+    implementation      'org.projectlombok:lombok:1.18.18'
+    implementation      'org.projectlombok:lombok:1.18.18'
+    implementation      'io.spring.platform:platform-bom:1.0.0.RELEASE'
     compileOnly 		'org.projectlombok:lombok'
     developmentOnly 	'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
