--- a/brinder-match/build.gradle
+++ b/brinder-match/build.gradle
@@ -1,8 +1,10 @@
 plugins {
-    id 'org.springframework.boot' 			version '2.5.3'
-    id 'io.spring.dependency-management' 	version '1.0.11.RELEASE'
+    id 'org.springframework.boot' 			version '2.7.5'
+    id 'io.spring.dependency-management' 	version '1.0.15.RELEASE'
     id 'java'
+    id 'com.google.cloud.tools.jib' 		version '3.3.1'
 }
+
 
 group = 'org.gso.brinder'
 version = '1.0.0-SNAPSHOT'
@@ -28,6 +30,12 @@ repositories {
 
 bootBuildImage {
     imageName = "tindeer/${project.name}"
+}
+
+jib {
+    to {
+        image = "tindeer/${project.name}"
+    }
 }
 
 dependencies {
