--- a/brinder-match/src/main/resources/application.yaml
+++ b/brinder-match/src/main/resources/application.yaml
@@ -1,20 +1,13 @@
 spring:
   data:
     mongodb:
-      host: mongo
       auto-index-creation: true
-      database: brindermatch
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+      database: brinder
 logging:
   level:
     org:
       gso: debug
 keycloak:
-  realm: tindeer
-  auth-server-url: http://localhost:8080/auth
-  proxy-url:  http://keycloak:8080/auth
-  resource: tindeer
-  
+  enabled: false
 server:
   port: 9090
