--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,14 +26,14 @@ services:
       spring_profiles_active: security,docker
     depends_on:
       - mongo
-  match:
-    image: tindeer/brinder-match
-    ports:
-      - 9090:8080
-    environment:
-      spring_profiles_active: security,docker
-    depends_on:
-      - mongo
+#  match:
+#    image: tindeer/brinder-match
+#    ports:
+#      - 9090:8080
+#    environment:
+#      spring_profiles_active: security,docker
+#    depends_on:
+#      - mongo
   swagger:
     image: swaggerapi/swagger-ui
     environment:
