--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -44,9 +44,9 @@ components:
             email: access email
 security:
   - ApiKeyAuth: []
-  - oAuthSample: 
-    - profile
-    - email
+  - oAuthSample:
+      - profile
+      - email
 paths:
   /profile/search:
     get:
@@ -74,7 +74,7 @@ paths:
           description: A JSON array of user names
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   name:
@@ -123,26 +123,16 @@ paths:
                 properties:
                   name:
                     type: string
-<<<<<<< HEAD
   /match/current:
     get:
       summary: Retourne le profile courant de l'utilisateur
       responses:
         '200': # status code
           description: A JSON array of user names
-=======
-  /matchs/address:
-    get:
-      summary: Retourne l'adresse de l'utilisateur
-      responses:
-        '200':
-          description: The address
->>>>>>> 7253b105e566b894b1c9fff9ad508c33a576917a
           content:
             application/json:
               schema:
                 type: object
-<<<<<<< HEAD
                 properties:
                   name:
                     type: string
@@ -151,62 +141,24 @@ paths:
       summary: Mettre à jour la localisation de l'utilisateur
       responses:
         '200': # status code
-          description: A JSON array of user names
-=======
-  /users/update:
-    put:
-      summary: Mettre à jour l'adresse de l'utilisateur
-#      requestBody:
-#        content:
-#          application/json:
-#            schema:
-#              $ref: "#/components/schemas/ProfileDto"
-      parameters:
-        - in: query
-          name: address
-          schema:
-            type: string
-          allowReserved: true
-          description: Nouvelle adresse
-      responses:
-        '200':
-          description: The address
->>>>>>> 7253b105e566b894b1c9fff9ad508c33a576917a
+          description:
           content:
             application/json:
               schema:
                 type: object
-<<<<<<< HEAD
                 properties:
                   name:
                     type: string
   /match/users/nearest:
     get:
-      summary: Retourne la liste des utilisateurs aux alentours
+      summary: Retourne le profile courant de l'utilisateur
       responses:
         '200': # status code
           description: A JSON array of user names
-=======
-
-  /users/nearest:
-    get:
-      summary: Retourne les utilisateurs les plus proche
-      #      requestBody:
-      #        content:
-      #          application/json:
-      #            schema:
-      #              $ref: "#/components/schemas/ProfileDto"
-      responses:
-        '200':
-          description: JSON Array of users
->>>>>>> 7253b105e566b894b1c9fff9ad508c33a576917a
           content:
             application/json:
               schema:
                 type: object
-<<<<<<< HEAD
                 properties:
                   name:
                     type: string
-=======
->>>>>>> 7253b105e566b894b1c9fff9ad508c33a576917a
