--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -151,7 +151,7 @@ paths:
                     type: string
   /match/users/nearest:
     get:
-      summary: Retourne le profile courant de l'utilisateur
+      summary: Retourne la liste des utilisateurs dans un rayon de 100m
       responses:
         '200': # status code
           description: A JSON array of user names
