--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -4,11 +4,58 @@ info:
   description: Notre super API pour notre application mobile de rencontre de Rennes
   version: 1.0.0
 servers:
-  - url: http://localhost:9080/api/v1
+  - url: http://localhost:8000
     description: Environnement de test Docker
-  - url: http://localhost:9090/api/v1
+  - url: http://localhost:9080
     description: Environnement de test local
 components:
+  schemas:
+    ProfileDto:
+      type: object
+      properties:
+        id:
+          type: string
+        userId:
+          type: string
+        mail:
+          type: string
+        age:
+          type: integer
+        firstname:
+          type: string
+        lastname:
+          type: string
+        created:
+          type: integer
+        updated:
+          type: integer
+
+    ProfileUpdateDto:
+      type: object
+      properties:
+        id:
+          type: string
+        age:
+          type: integer
+    ProfileDtos:
+      type: array
+      items:
+        $ref: "#/components/schemas/ProfileDto"
+    ProfileMatchDto:
+      type: object
+      properties:
+        id:
+          type: string
+        latitude:
+          type: number
+        longitude:
+          type: number
+
+    ProfileMatchDtos:
+      type: array
+      items:
+        $ref: "#/components/schemas/ProfileMatchDto"
+
   securitySchemes:
     oAuthSample:    # <---- arbitrary name
       type: oauth2
@@ -24,18 +71,110 @@ security:
   - oAuthSample: 
     - profile
     - email
+
 paths:
   /profiles/current:
     get:
-      summary: Retourne le profile courant de l'utilisateur
+      summary: Return the profile of the current user
       responses:
         '200':    # status code
-          description: A JSON array of user names
+          description: Successfully returned the current user
           content:
             application/json:
-              schema: 
-                type: object
-                properties:
-                  name:
-                    type: string
-                    
+              schema:
+                $ref: "#/components/schemas/ProfileDto"
+
+  /profiles:
+    get:
+      summary: Return the profile lists
+      responses:
+        '200':
+          description: Successfully returned the profile list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProfileDtos"
+    post:
+      summary: Adds a new user profile
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ProfileUpdateDto"
+      responses:
+        '201':
+          description: Successfully Created Profile
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProfileUpdateDto"
+  /profiles/{id}:
+    get:
+      summary: Get user by the profile ID
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: Successfully retrieved user profile
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProfileUpdateDto"
+    put:
+      summary: Update user profile by the profile ID
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ProfileUpdateDto"
+      parameters:
+          - in: path
+            name: id
+            schema:
+               type: integer
+            required: true
+      responses:
+        '201':
+          description: Successfully updated user profile
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProfileUpdateDto"
+
+  /matches/{id}:
+    get:
+      summary: Return the list of match in a radius of 100m. It will return the location of every match and its id
+      responses:
+        '200':
+          description: Successfully returned the profile list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProfileMatchDtos"
+
+  /matches/location/{id}:
+    put:
+      summary: Update user location by the profile ID
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ProfileMatchDto"
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        '201':
+          description: Successfully updated user  location
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProfileMatchDto"
+
