--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,14 @@ services:
       spring_profiles_active: security,docker
     depends_on:
       - mongo
+  match:
+    image: tindeer/brinder-match-api
+    ports:
+      - 9060:8080
+    environment:
+      spring_profiles_active: security,docker
+    depends_on:
+      - mongo
   swagger:
     image: swaggerapi/swagger-ui
     environment:
@@ -33,3 +41,20 @@ services:
       - 8888:8080
     volumes:
       - ./swagger:/doc
+  kong:
+    image: kong:alpine
+    environment:
+      KONG_DATABASE: "off"
+      KONG_DECLARATIVE_CONFIG: "/usr/local/kong/declarative/kong.yml"
+      KONG_PROXY_ACCESS_LOG: "/dev/stdout"
+      KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
+      KONG_PROXY_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+    volumes:
+      - ./kong:/usr/local/kong/declarative
+    ports:
+      - "8000:8000"
+      - "8443:8443"
+      - "8001:8001"
+      - "8444:8444"
