--- a/brinder-match-api/build.gradle
+++ b/brinder-match-api/build.gradle
@@ -32,6 +32,7 @@ bootJar {
 
 dependencies {
 	implementation 		'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 		'org.springframework.boot:spring-boot-starter-validation'
 	implementation 		'org.springframework.boot:spring-boot-starter-web'
 	implementation 		'org.springframework.boot:spring-boot-starter-security'
