--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@
         - "27017:27017"
 
     profile:
-      image: ./brinder-profile-api
+      build: ./brinder-profile-api
       ports:
         - 9080:8080
       environment:
@@ -22,7 +22,7 @@
       depends_on:
         - mongo
     match:
-      image: ./brinder-match-api
+      build: ./brinder-match-api
       ports:
         - 9090:8080
       environment:
