--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -33,9 +33,26 @@ paths:
           description: A JSON array of user names
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   name:
                     type: string
-                    
+  /profiles:
+    get:
+      summary: Get profile by email
+      description: Search for profile using an email address and returns a paginated result.
+      parameters:
+        - name: page
+          in: query
+          description: Page number of the results.
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default:  0
+      responses:
+        '200':
+          description: OK
+        '401':
+          description: Unauthorized
